tests/error/struct_errors/duplicate_field.err
Error: Duplicate field (at $FILE:7:4)
  | 
5 | class MyStruct:
6 |     x: int
7 |     x: bool
  |     ^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
